[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.3.1",
    "chromadb>=1.3.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.0",
    "flashrank>=0.2.10",
    "ipykernel>=7.1.0",
    "jq>=1.10.0",
    "langchain>=0.3.12",
    "langchain-community>=0.3.12",
    "langchain-core>=0.3.26",
    "langchain-experimental>=0.3.3",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=0.3.3",
    "langgraph>=1.0.4",
    "langgraph-supervisor>=0.0.31",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "pymupdf>=1.26.6",
    "pypdf>=6.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.21",
    "wikipedia>=1.4.0",
]
